--- a/TravelMate/WebContent/WEB-INF/web.xml
+++ b/TravelMate/WebContent/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>TravelMate</display-name>
-<!--   
-  <filter>
+
+<!--    <filter>
 		<filter-name>Resource Filter</filter-name>
 		<filter-class>filter.ResourceFilter</filter-class>
 	</filter>
@@ -12,9 +12,9 @@
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>utf-8</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
+		</init-param>s
+	</filter> -->
+	<!-- <filter-mapping>
 		<filter-name>Resource Filter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
@@ -26,11 +26,11 @@
 		<servlet-name>DispatcherServlet</servlet-name>
 		<servlet-class>controller.DispatcherServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
+ 	<servlet-mapping>
 		<servlet-name>DispatcherServlet</servlet-name>
 		<url-pattern>/</url-pattern>
-	</servlet-mapping>
-	 -->
+	</servlet-mapping> -->
+
 	 <welcome-file-list>
 	    <welcome-file>index.html</welcome-file>
 	    <welcome-file>/jsp/index.jsp</welcome-file>
